# cmake_hello_triangle

./: .gitignore  CMakeLists.txt  main.cpp
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
